# create_random_ply

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  runme.sh
include/: config.h  point.h
